test/testdata/string/invalid_property_access_error.lox
// error: property access is not valid for 'string' value
// lint warning: property 'y' has not been declared or assigned anywhere
"foo".y;
